<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- IRC CHANNEL FRAGMENTS  -->
    
    <!-- LEFT MENU -->
    <string name="menu_networks">Networks</string>
    <string name="menu_settings">Settings</string>
    

    
    <!-- CONNECTIONS LIST -->
    <string name="addNetwork">Add network</string>
    <string name="editNetwork">Edit network</string>
    <string name="servername">Network name (e.g. QuakeNet)</string>
    <string name="hostname">Hostname (eg. irc.quakenet.org)</string>
    <string name="nick">Nick name (e.g. HotVanilla44)</string>
    <string name="port">Port (e.g. 6667)</string>
    <string name="name">Real name (e.g. Dave)</string>
    <string name="alternateNick2">Second nick</string>
    <string name="alternateNick3">Third nick</string>
    <string name="more">More</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="context_connect">Connect</string>
    <string name="context_disconnect">Disconnect</string>
    <string name="context_edit">Edit</string>
    <string name="context_remove">Delete</string>
    
    <!-- DIALOG STUFF -->
    <string name="dialog_invite_recieved"><b>%1$s</b> has invited you to join #<b>%2$s</b></string>
    <string name="dialog_who_channels">Channel(s)</string>
    <string name="dialog_who_nick">Nickname</string>
    <string name="dialog_who_name">Name</string>
    <string name="dialog_who_idle">Currently idle</string>
    <string name="dialog_who_signedOn">Signed on</string>
    <string name="dialog_who_server">Server</string>
    <string name="dialog_who_serverInfo">Serverinfo</string>
    <string name="dialog_who_isAway">Is away</string>
    
    <string name="app_name">WHIRC</string>
    <string name="action_settings">Settings</string>
    <string name="action_servers">Join Server</string>
    <string name="changedTopic">%s changed topic to</string> <!-- user -->
    <string name="topic"> %s</string> <!-- topic -->
    <string name="channel">Channel</string>
    <string name="channelList">Get channel list</string>
    <string name="channelTopic">Topic for %s :</string> <!-- channel name -->
    <string name="dataSync">Data and Sync</string>
    <string name="diconnectServer">Disconnect</string>
    <string name="displayName">Display name</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="enterChannel">Now talking on %s </string>	<!-- channel name -->
  	<string name="joinChannel">Join channel</string>
  	<string name="joinNetwork">Join network</string>
    <string name="Help">Help</string>
    <string name="networkList">Network list</string>
    <string name="quit">Quit</string>
    <string name="reconnectServer">Reconnect</string>
    <string name="sendMessage">Send a message</string>
    
    <!-- SETTINGSACTIVITY -->
	<string name="settings_userCat">User info</string>
	<string name="settings_userEdit">Edit user info</string>
	<string name="settings_userEditServers">Select server</string>
	<string name="settings_userDelete">Delete user data</string>
	<string name="settings_userDeleteSum">Deletes all user data</string>
	<string name="settings_systemCat">System</string>
	<string name="settings_notifications">Notifications</string>
	<string name="settings_notificationsOn">Turn on notifications</string>
	<string name="settings_notificationsPM">Notifiy when private messaged</string>
	<string name="settings_options">Options</string>
	
	<!-- SETTINGSDIALOGS -->
	<string name="setDialog_userEdit_nick">Nickname</string>
	<string name="setDialog_userEdit_nick_hint">Your desired nickname</string>
	<string name="setDialog_userEdit_nickTwo">Nickname #2</string>
	<string name="setDialog_userEdit_nickThree">Nickname #3</string>
	<string name="setDialog_userEdit_name">Name</string>
	<string name="setDialog_userEdit_name_hint">Your name (Optional)</string>
	<string name="setDialog_userEdit_password">Password</string>
	<string name="setDialog_userDeleteWarning">WARNING! All user data will be deleted. Are you sure?</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    
    <string name="user">User </string>
    <string name="userJoinChannel"> has joined the channel</string>	<!-- username -->
    <string name="userLeftChannel"> has left the channel</string> <!-- username -->
    <string name="userBanned"> was banned by</string> <!-- username -->
    <string name="userChangeName"> is now known as</string> <!-- old username -->
    <string name="userKicked"> was kicked from channel</string> <!-- username -->
    <string name="userPromoted"> was promoted to </string> <!-- username -->
    <string name="userQuit"> has quit IRC </string>
    
    <string name="awayStatus">You are now listed as AWAY</string>
    <string name="modeSet"> Mode set to </string>
    <string name="noLongerAway">You are no longer listed as AWAY</string>
    <string name="othersAwayStatus"> is now listed as</string>
    <string name="othersNoLongerAway"> is no longer listed as AWAY</string>
    
    <string name="setBy">\nSet by </string>
    <string name="on"> on </string>
    <string name="yourNick">Your nickname </string>
    <string name="isInvalid"> is invalid. Changing to </string>
    <string name="changedNick"> has changed nick to </string>
    
    
</resources>
